--- a/authWebsiteV1/src/app/login/login.component.html
+++ b/authWebsiteV1/src/app/login/login.component.html
@@ -21,7 +21,7 @@
             </div>
           </div>
         
-          <button type="submit" [disabled]="loginForm.invalid">Register</button>
+          <button type="submit" [disabled]="loginForm.invalid">Login</button>
         </form>
 </body>
 
